--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -83,7 +83,7 @@ tail_includes:
   {{ content }}
 </div> 
 
-\{\% include ads.html \%\}
+{% include ads.html %}
 
 <div class="post-tail-wrapper text-muted">
 
