--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,6 +20,4 @@ layout: default
 {% if site.hide_related_posts != true %}
   {% include related-posts.html %}
 {% endif %}
-{% if site.data.settings.disqus.comments %}
-  {% include disqus.html %}
-{% endif %}
+{% include giscus.html %}
