added Google Adsense

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,6 +27,9 @@
         }
       });
   </script>
+  <!-- Google Adsense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2125431543426665"
+  crossorigin="anonymous"></script>
   <!-- Google Analytics -->
   {% include google-analytics.html %}
   <!-- Use Jekyll SEO plugin -->
