--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,6 +27,8 @@
         }
       });
   </script>
+  <!-- Plausible Analytics -->
+  <script defer data-domain="subhashh.tech" src="https://subhashh-plausible.x6jcbj.easypanel.host/js/script.js"></script>
   <!-- Google Adsense -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2125431543426665"
   crossorigin="anonymous"></script>
